--- a/public/index.html
+++ b/public/index.html
@@ -291,7 +291,51 @@
                 However, by that time, the players that advance most in the game and those who provide more feedback in the Discord Server will be rewarded. <br>
             To participate in the Alpha Season, just follow the steps below:</p>
 
-            <div class="form-beta-users">
+            <div class="nk-gap-2"></div>
+
+            <div class="container">
+
+
+                <div class="row vertical-gap lg-gap">
+
+                    <div class="col-md-4">
+                        <div class="nk-ibox">
+
+                            <div class="nk-ibox-cont">
+                                <h2 class="nk-ibox-title">STEP 1</h2>
+
+                                <h6>Join our <a href="https://discord.gg/PAWDEJBS5W" target="_blank" style="color: #e08821;" >Discord Community</a></h6>
+
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="nk-ibox">
+
+                            <div class="nk-ibox-cont">
+                                <h2 class="nk-ibox-title">STEP 2</h2>
+                                <h6> Follow us on <a href="https://twitter.com/Chains_Of_Glory" target="_blank" style="color: #e08821;" >Twitter</a></h6>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="nk-ibox">
+
+                            <div class="nk-ibox-cont">
+                                <h2 class="nk-ibox-title">STEP 3</h2>
+                                <h6>Provide Feedback and Get Rewards</h6>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="nk-gap-2"></div>
+            </div>
+
+            <!-- <div class="form-beta-users">
                 <div>
                     <h5>STEP 1</h5>
 
@@ -309,40 +353,25 @@
 
                     <p style="text-align: justify;">&nbsp Fill in the Alpha Season Registration Form </p>
                 </div>
-                <div>
 
-
-                    <h5>ALPHA SEASON REGISTRATION FORM</h5>
-                    <!-- START: Form 1 -->
-                    <form  class="nk-form nk-form-ajax">
-
-                        <input type="text" class="form-control required" name="" id="beta-users-name" placeholder="User Name *">
-                        <div class="nk-gap"></div>
-                        <input type="email" class="form-control required" name="" id="beta-users-email" placeholder="Email *">
-                        <div class="nk-gap"></div>
-                        <input type="text" class="form-control required" name="" id="beta-users-address" placeholder="ETH-Address *">
-                        <div class="nk-gap" id="divAddress"></div>
-                        <!-- <select name="how did you find us" class="form-control" placeholder="How did you find us *">
-                            <option class="form-control required" hidden selected>How did you find us *</option>
-                            <option class="form-control required" value="1" >Twitter</option>
-                            <option class="form-control required" value="2" >Discord</option>
-                            <option class="form-control required" value="3">Youtube</option>
-                            <option class="form-control required" value="3">Word of Mouth</option>
-                        </select> -->
-
-                        <div class="nk-gap"></div>
-                        <div id="success"></div>
-                        <!-- <div class="nk-form-response-success"></div>
-                        <div class="nk-form-response-error"></div> -->
-                        <button class="nk-btn nk-btn-lg link-effect-4" id="send-beta-users" onclick="sendBetaUsers()">Send</button>
-                    </form>
-                    <!-- END: Form 1 -->
-
-                </div>
-            </div>
+            </div> -->
 
         </div>
-        <div class="nk-gap-1"></div>
+
+        <div class="main-features" id="menu-game">
+            <h2>Rewards</h2>
+
+
+        </div>
+
+        <div class="container-box">
+            <img src="./assets/images/COG/rewards.png">
+
+        </div>
+        <div class="nk-gap-2"></div>
+        <div class="container-box">
+            <h6>Discover other challenges and the rewards program in fully detail by joining our <a href="https://discord.gg/PAWDEJBS5W" target="_blank" style="color: #e08821;" >Discord Community</a></h6>
+        </div>
 
 <!-- END ALPHA SEASON -->
 
